--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container text-center">
   <h1 class="text-center">Logest Word Game</h1>
-  <h2><%= session["session_id"] %></h2>
+  <h2><%= session[:score] %> Points</h2>
+  <h2><%= session[:count] %> Round</h2>
   <div class="row text-center">
      <% params[:letters].split(" ").each do |letter| %>
         <div class="col-sm-1 btn btn-primary m-2">
